--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    table {
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid black;
+      padding: 5px;
+      text-align: left;
+    }
+  </style>
+</head>
+<body>
+
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Student ID</th>
+    </tr>
+    <tr>
+      <td>Ruan You Jia Kang</td>
+      <td>1133531</td>
+    </tr>
+  </table>
+
+</body>
+</html>
 
